@@ -41,6 +41,7 @@ siril 1.4.0-beta2
 * Simplified the scripts and SPCC repository checking and made it more robust and thread-safe (!872)
 * Improved visibility of whether the autostretch preview is linked or unlinked (!878)
 * Changed the default GHT and asinh settings to update faster.
+* Added returning a dict from SirilInterface.get_image_fits_header() and SirilInterface.get_seq_frame_header in sirilpy (!877)
 
 siril 1.4.0-beta1
 04/26/25
